--- a/src/less/responsive-767px-max.less
+++ b/src/less/responsive-767px-max.less
@@ -61,6 +61,11 @@
     position: static;
   }
 
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
 }
 
 
@@ -146,13 +151,13 @@
     width: auto;
   }
 
-      .elevator p {
-        margin-left: 10px;
-        font-size: 1.4em;
-        line-height: 1.2em;
-        margin-bottom: 20px;
-        /*text-align: center;*/
-      }
+  .elevator p {
+    margin-left: 10px;
+    font-size: 1.4em;
+    line-height: 1.2em;
+    margin-bottom: 20px;
+    /*text-align: center;*/
+  }
 
   .ifreezy {
     width: 300px;
@@ -162,6 +167,11 @@
 
   .vid {
     width: 300px;
+  }
+
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
   }
 
 }
