--- a/src/less/responsive-768px-979px.less
+++ b/src/less/responsive-768px-979px.less
@@ -30,6 +30,15 @@
   	width: 300px;
   }
 
+  .pull-right {
+    float: right;
+  }
+
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
   // No need to reset .thumbnails here since it's the same @gridGutterWidth
 
 }
