--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -4183,6 +4183,53 @@ a.badge:hover {
   line-height: 27px;
   color: inherit;
 }
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.rowwy {
+  margin-bottom: 40px;
+  /*text-align: center;*/
+
+}
+.heady {
+  width: 320px;
+  /*margin-top: 20px;*/
+
+  margin-bottom: 20px;
+  text-align: center;
+}
+.elevator p {
+  margin-left: 10px;
+  font-size: 1.8em;
+  line-height: 1.2em;
+  margin-bottom: 20px;
+  /*text-align: center;*/
+
+}
+.vid {
+  width: 400px;
+}
+.movie {
+  /*        width: 768px;
+	height: 1024px;
+	background-color: #CCC;*/
+
+  text-align: right;
+}
+.cta {
+  margin-bottom: 40px;
+}
+.ifreezy {
+  width: 400px;
+  height: 564px;
+}
+.well {
+  padding: 30px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+}
 .pull-right {
   float: right;
 }
