--- a/bootstrap/css/responsive.css
+++ b/bootstrap/css/responsive.css
@@ -121,6 +121,10 @@
   .carousel-caption {
     position: static;
   }
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
 }
 @media (max-width: 767px) {
   body {
@@ -197,6 +201,10 @@
   }
   .vid {
     width: 300px;
+  }
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
   }
 }
 @media (min-width: 768px) and (max-width: 979px) {
@@ -424,6 +432,13 @@
   .vid {
     width: 300px;
   }
+  .pull-right {
+    float: right;
+  }
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
 }
 @media (max-width: 979px) {
   body {
@@ -550,6 +565,10 @@
   .navbar-static .navbar-inner {
     padding-left: 10px;
     padding-right: 10px;
+  }
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
   }
 }
 @media (min-width: 980px) {
