--- a/src/less/responsive-navbar.less
+++ b/src/less/responsive-navbar.less
@@ -138,6 +138,11 @@
     padding-left:  10px;
     padding-right: 10px;
   }
+
+  body {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
 }
 
 
