switcher on some div floats

--- a/src/less/bootstrap-numby.less
+++ b/src/less/bootstrap-numby.less
@@ -7,12 +7,21 @@ footer {
 	text-align: center;
 }
 
-.info {
-	padding: 0px 50px 0px 50px;
+// .app-store-holder {
+// 	text-align: center;
+// }
+
+.app-store {
+	margin-left: 10px;
+	margin-bottom: 20px;
 }
 
-.rowwy {
-	margin-bottom: 40px;
+.info {
+	padding: 0px 50px 80px 50px;
+}
+
+.row-top {
+	margin-bottom: 60px;
 	/*text-align: center;*/
 }
 
@@ -20,7 +29,7 @@ footer {
 	// width: 320px;
 	/*margin-top: 20px;*/
 	margin-bottom: 20px;
-	margin-top: 24px;
+	// margin-top: 24px;
 	text-align: center;
 }
 
