--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -4190,11 +4190,15 @@ body {
 footer {
   text-align: center;
 }
-.info {
-  padding: 0px 50px 0px 50px;
+.app-store {
+  margin-left: 10px;
+  margin-bottom: 20px;
 }
-.rowwy {
-  margin-bottom: 40px;
+.info {
+  padding: 0px 50px 80px 50px;
+}
+.row-top {
+  margin-bottom: 60px;
   /*text-align: center;*/
 
 }
@@ -4202,7 +4206,6 @@ footer {
   /*margin-top: 20px;*/
 
   margin-bottom: 20px;
-  margin-top: 24px;
   text-align: center;
 }
 .elevator p {
