--- a/bootstrap/css/responsive.css
+++ b/bootstrap/css/responsive.css
@@ -427,6 +427,13 @@
   .vid {
     width: 300px;
   }
+  .ifreezy {
+    width: 300px;
+    height: 430px;
+  }
+  .vid {
+    width: 300px;
+  }
   .pull-right {
     float: right;
   }
