--- a/src/less/responsive-768px-979px.less
+++ b/src/less/responsive-768px-979px.less
@@ -23,11 +23,19 @@
   .ifreezy {
     width: 300px;
     height: 430px;
-    // height: 564px;
   }
 
   .vid {
-  	width: 300px;
+    width: 300px;
+  }
+
+  .ifreezy {
+    width: 300px;
+    height: 430px;
+  }
+
+  .vid {
+    width: 300px;
   }
 
   .pull-right {
