--- a/src/less/bootstrap-numby.less
+++ b/src/less/bootstrap-numby.less
@@ -66,3 +66,9 @@ footer {
 	padding: 30px;
 	.border-radius(15px);
 }
+
+.info-pic {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	.border-radius(10px);
+}
