testing smaller width for iPhone

--- a/src/less/responsive-767px-max.less
+++ b/src/less/responsive-767px-max.less
@@ -66,6 +66,15 @@
     padding-bottom: 40px;
   }
 
+  .ifreezy {
+    width: 200px;
+    height: 30px;
+  }
+
+  // .vid {
+  //   width: 200px;
+  // }
+
 }
 
 
@@ -164,9 +173,9 @@
     height: 430px;
   }
 
-  .vid {
-    width: 300px;
-  }
+  // .vid {
+  //   width: 300px;
+  // }
 
   body {
     padding-top: 60px;
