--- a/src/less/responsive-768px-979px.less
+++ b/src/less/responsive-768px-979px.less
@@ -29,14 +29,14 @@
     width: 300px;
   }
 
-  .ifreezy {
-    width: 300px;
-    height: 430px;
-  }
+  // .ifreezy {
+  //   width: 300px;
+  //   height: 430px;
+  // }
 
-  .vid {
-    width: 300px;
-  }
+  // .vid {
+  //   width: 300px;
+  // }
 
   .pull-right {
     float: right;
