--- a/src/less/bootstrap-numby.less
+++ b/src/less/bootstrap-numby.less
@@ -17,6 +17,9 @@ footer {
 }
 
 .info {
+	h2 {
+		margin-bottom: 20px;
+	}
 	padding: 0px 30px 80px 30px;
 }
 
@@ -35,10 +38,14 @@ footer {
 
 .elevator p {
 	margin-left: 10px;
-	font-size: 1.5em;
+	font-size: 1.4em;
 	line-height: 1.2em;
 	margin-bottom: 20px;
 	/*text-align: center;*/
+}
+
+.ifreezy-holder {
+	// text-align: center;
 }
 
 .ifreezy {
@@ -46,9 +53,9 @@ footer {
 	height: 564px;
 }
 
-.vid {
-	width: 400px;
-}
+// .vid {
+// 	width: 400px;
+// }
 
 .movie {
 	/*        width: 768px;
