--- a/src/less/responsive-767px-max.less
+++ b/src/less/responsive-767px-max.less
@@ -66,10 +66,10 @@
     padding-bottom: 40px;
   }
 
-  .ifreezy {
-    width: 200px;
-    height: 30px;
-  }
+  // .ifreezy {
+  //   width: 200px;
+  //   height: 30px;
+  // }
 
   // .vid {
   //   width: 200px;
@@ -169,8 +169,8 @@
   }
 
   .ifreezy {
-    width: 300px;
-    height: 430px;
+    width: 260px;
+    height: 380px;
   }
 
   // .vid {
