--- a/src/less/bootstrap-numby.less
+++ b/src/less/bootstrap-numby.less
@@ -4,6 +4,7 @@ body {
 }
 
 footer {
+	margin-top: 40px;
 	text-align: center;
 }
 
@@ -17,14 +18,20 @@ footer {
 }
 
 .info {
+	// text-align: center;
 	h2 {
-		margin-bottom: 20px;
+		font-size: 1.4em;
+		// margin-bottom: 20px;
 	}
-	padding: 0px 30px 80px 30px;
+	padding: 0px 30px 00px 30px;
 }
 
 .row-top {
-	margin-bottom: 100px;
+	margin-bottom: 40px;
+	/*text-align: center;*/
+}
+.row-ipad-shots {
+	margin-top: 40px;
 	/*text-align: center;*/
 }
 
@@ -44,13 +51,21 @@ footer {
 	/*text-align: center;*/
 }
 
-.ifreezy-holder {
-	// text-align: center;
+.iframe-holder {
+	// padding: 20px;
+	// .border-radius(4px);
+	// // .ie7-restore-left-whitespace(); // Give IE7 some love
+	// .box-shadow(~"0 1px 20px rgba(0,0,0,.4)");
 }
 
 .ifreezy {
 	width: 400px;
 	height: 564px;
+	padding: 20px;
+	.border-radius(4px);
+	// .ie7-restore-left-whitespace(); // Give IE7 some love
+	.box-shadow(~"0 1px 20px rgba(0,0,0,.1)");
+	// margin-bottom: 30px;
 }
 
 // .vid {
@@ -78,4 +93,12 @@ footer {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	.border-radius(10px);
+}
+
+.span-ipad-shot {
+	text-align: center;
+}
+
+.ipad-shot {
+	margin-bottom: 20px;
 }
